# DrGPT

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  READTHEDOCS_SETUP.md  UPDATE_FEATURE_SUMMARY.md  __main__.py  pyproject.toml  requirements.txt  setup.py  test_api_prompt.py
docs/: README.md  requirements.txt
docs/source/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  quick_start.rst  troubleshooting.rst
docs/source/_static/: .gitkeep
docs/source/api/: cli_reference.rst
docs/source/examples/: use_cases.rst
docs/source/features/: editor.rst  models.rst  providers.rst
docs/source/modes/: code.rst  interface.rst  shell.rst  standard.rst
docs/source/usage/: cli_reference.rst  complete_guide.rst
drgpt/: __init__.py  __main__.py
drgpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
drgpt/cli/: __init__.py  commands.py  editor.py  interface.py  main.py  parser.py  query_handler.py
drgpt/core/: __init__.py  ai_interface.py  config.py  manager.py  updater.py
drgpt/modes/: __init__.py  base.py  chat.py  code.py  shell.py  standard.py
drgpt/utils/: __init__.py  console.py  file_handler.py  validation.py
scripts/: setup.ps1  setup.sh
tests/: test_basic.py  test_drgpt.py
